# For-the-Love-of-Neural-Networks

./: CMakeLists.txt  README.md  main.cpp  main.h
CSVFile/: test.csv
Color/: color.cpp  color.h
Tensor/: README.md  tensor.cpp  tensor.h  tensor_init.cpp  tensor_operators.cpp
Tensor/Exception/: tensor_error_programing.cpp  tensor_error_programing.h
Tensor/vector/: vector.cpp  vector.h
Vector/: CMakeLists.txt  READ_BO_MAY.md  Vector.cpp  Vector.h  main.cpp
